# Baby-Care-AI

./: .gitignore  .replit  README  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
artifacts/api-server/src/: app.ts
artifacts/babycare/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/babycare/.replit-artifact/: artifact.toml
artifacts/babycare/src/: App.tsx  index.css
artifacts/babycare/src/components/: layout.tsx
artifacts/babycare/src/hooks/: use-audio-recorder.ts  use-geolocation.ts
artifacts/babycare/src/pages/: community.tsx  cry-analyzer.tsx  dashboard.tsx  diagnosis.tsx  emergency.tsx  growth-tracker.tsx  photo-analysis.tsx  reminders.tsx
artifacts/flask-backend/: app.py  babycare.db  requirements.txt
artifacts/flask-backend/baby_severity/: curated_baby_severity_dataset.csv  generate_curated_baby_dataset.py  severity_model.joblib  train_severity_model.py
artifacts/mockup-sandbox/: package.json
lib/api-spec/: openapi.yaml
scripts/: train_diagnosis_model.py
